error2.txt
In file included from C:/msys64/mingw64/include/c++/11.3.0/thread:43,
                 from main.cpp:5:
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h: In instantiation of 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(std::vector<int>&, std::queue<int>&, std::mutex&, std::queue<int>&, std::mutex&, std::vector<int>&, std::mutex&, int); _Args = {std::vector<int, std::allocator<int> >&, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex&, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int&}; <template-parameter-1-3> = void]':
main.cpp:79:160:   required from here
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:130:72: error: static assertion failed: std::thread arguments must be invocable after conversion to rvalues
  130 |                                       typename decay<_Args>::type...>::value,
      |                                                                        ^~~~~
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:130:72: note: 'std::integral_constant<bool, false>::value' evaluates to false
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h: In instantiation of 'struct std::thread::_Invoker<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> >':
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:203:13:   required from 'struct std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> > >'
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:143:29:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(std::vector<int>&, std::queue<int>&, std::mutex&, std::queue<int>&, std::mutex&, std::vector<int>&, std::mutex&, int); _Args = {std::vector<int, std::allocator<int> >&, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex&, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int&}; <template-parameter-1-3> = void]'
main.cpp:79:160:   required from here
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:252:11: error: no type named 'type' in 'struct std::thread::_Invoker<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> >::__result<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> >'
  252 |           _M_invoke(_Index_tuple<_Ind...>)
      |           ^~~~~~~~~
C:/msys64/mingw64/include/c++/11.3.0/bits/std_thread.h:256:9: error: no type named 'type' in 'struct std::thread::_Invoker<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> >::__result<std::tuple<void (*)(std::vector<int, std::allocator<int> >&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::queue<int, std::deque<int, std::allocator<int> > >&, std::mutex&, std::vector<int, std::allocator<int> >&, std::mutex&, int), std::vector<int, std::allocator<int> >, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::reference_wrapper<std::queue<int, std::deque<int, std::allocator<int> > > >, std::mutex, std::vector<int, std::allocator<int> >, std::mutex, int> >'
  256 |         operator()()
      |         ^~~~~~~~
